@@ -44,6 +44,8 @@ namespace Server
 		private static bool m_Crashed;
 		private static Thread timerThread;
 		private static string m_BaseDirectory;
+		private static DirectoryInfo m_BaseDirectoryInfo;
+		private static DirectoryInfo m_CacheDirectoryInfo;
 		private static string m_ExePath;
 		private static ArrayList m_DataDirectories = new ArrayList();
 		private static Assembly m_Assembly;
@@ -184,6 +186,33 @@ namespace Server
 				}
 
 				return m_BaseDirectory;
+			}
+		}
+
+		public static DirectoryInfo BaseDirectoryInfo {
+			get {
+				if (m_BaseDirectoryInfo == null)
+					m_BaseDirectoryInfo = new DirectoryInfo(BaseDirectory);
+
+				return m_BaseDirectoryInfo;
+			}
+		}
+
+		public static DirectoryInfo LocalDirectoryInfo {
+			get {
+				return BaseDirectoryInfo
+					.CreateSubdirectory("local");
+			}
+		}
+
+		public static DirectoryInfo CacheDirectoryInfo {
+			get {
+				if (m_CacheDirectoryInfo == null)
+					m_CacheDirectoryInfo = BaseDirectoryInfo
+						.CreateSubdirectory("var")
+						.CreateSubdirectory("cache");
+
+				return m_CacheDirectoryInfo;
 			}
 		}
 
